# plantilla_agente_memoria_postgreSQL

./: README.md  docker-compose.yml
agent-worker/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
agent-worker/worker/: api.py
agent-worker/worker/agent/: graph.py  nodes.py  prompt_loader.py  prompts.py  state.py
agent-worker/worker/agent/tools/: __init__.py
api-service/: .env.example  Dockerfile  docker-compose.yml  main.py  requirements.txt
api-service/core/: config.py
api-service/routers/: webhook.py
db-memory/: .env.example  init.sql
